--- a/Backend/MiniJava Backend.csproj
+++ b/Backend/MiniJava Backend.csproj
@@ -47,6 +47,7 @@
     <Compile Include="LabelGenerator.cs" />
     <Compile Include="MiniJavaSynthesizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Visitors\LivenessVisitor.cs" />
     <Compile Include="Visitors\SymbolPreprocessorVisitor.cs" />
     <Compile Include="Visitors\CodeGeneratorVisitor.cs" />
     <Compile Include="Visitors\MethodTableGeneratorVisitor.cs" />
